# listfatbadsectors

./: CMakeLists.txt
src/: listfatbadsectors.cpp
